efm32: arch config tokens and build cleanup

--- a/arch/efm32/drivers/dma/dma.config
+++ b/arch/efm32/drivers/dma/dma.config
@@ -5,6 +5,7 @@
   depend CONFIG_DEVICE_DMA
   depend CONFIG_DEVICE_IRQ
   require CONFIG_DRIVER_EFM32_DMA_CHANNEL_COUNT
+  require CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
 %config end
 
 %config CONFIG_DRIVER_EFM32_DMA_CHANNEL_COUNT
@@ -18,12 +19,6 @@
   desc Special mode for test
   parent CONFIG_DRIVER_EFM32_DMA
   default undefined
-%config end
-
-%config CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT
-  desc Maximum number of dma channel 
-  parent CONFIG_DRIVER_EFM32_DMA
-  flags value
 %config end
 
 %config CONFIG_DRIVER_EFM32_DMA_LINKED_LIST_SIZE
