--- a/arch/efm32/drivers/i2c/i2c.config
+++ b/arch/efm32/drivers/i2c/i2c.config
@@ -4,5 +4,6 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_I2C
   depend CONFIG_DEVICE_IRQ
+  require CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
 %config end
 
