--- a/arch/efm32/drivers/ldma/dma.config
+++ b/arch/efm32/drivers/ldma/dma.config
@@ -2,10 +2,10 @@
 %config CONFIG_DRIVER_EFR32_DMA
   desc Enable EFR32 linked DMA driver
   parent CONFIG_ARCH_EFM32
-  depend CONFIG_EFR32
   depend CONFIG_DEVICE_DMA
   depend CONFIG_DEVICE_IRQ
   require CONFIG_DRIVER_EFM32_DMA_CHANNEL_COUNT
+  require CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG1
 %config end
 
 %config CONFIG_DRIVER_EFR32_DMA_LINKED_LIST_SIZE
