--- a/arch/efm32/drivers/msc/msc.config
+++ b/arch/efm32/drivers/msc/msc.config
@@ -3,5 +3,6 @@
   desc Enable EFM32 Memory system controller driver
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_MEM
+  require CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
 %config end
 
