--- a/arch/efm32/drivers/recmu/recmu.config
+++ b/arch/efm32/drivers/recmu/recmu.config
@@ -3,6 +3,7 @@
   desc Enable EFM32 Reset, Clock and Energy management units drivers
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_CLOCK
+  require CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
 %config end
 
 %config CONFIG_DRIVER_EFM32_RECMU_SLEEPDEEP
