--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -1,17 +1,12 @@
 
 %config CONFIG_ARCH_EFM32
-  desc Silabs EFM32 platform support
+  desc Silabs EFM32/EFR32 platform support
   module arch Platforms::Silabs EFM32
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=efm32
-  single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO CONFIG_EFM32_GIANT_GECKO CONFIG_EFR32
-  require CONFIG_EFM32_FLASH_PAGE_SIZE
-%config end
-
-%config CONFIG_EFM32_FLASH_PAGE_SIZE
-  desc Specify the log2 of the flash page size
-  parent CONFIG_ARCH_EFM32
-  flags value
+  require CONFIG_EFM32_RAMSIZE
+  require CONFIG_EFM32_FAMILY
+  require CONFIG_EFM32_ARCHREV
 %config end
 
 %config CONFIG_EFM32_BOOT_BUTTON
@@ -43,56 +38,21 @@
 %init end
 
 %config CONFIG_EFM32_RAMSIZE
-  desc Size of ram 0x20000000
+  desc Size of ram mapped at 0x20000000
   parent CONFIG_ARCH_EFM32
   flags value
 %config end
 
-%config CONFIG_EFM32_GECKO
-  desc Support for EFM32 Gecko family of microcontrollers
+%config CONFIG_EFM32_FAMILY
+  desc Specifies the microcontroller Gecko family. see include/arch/efm32/chips.h
   parent CONFIG_ARCH_EFM32
-  depend CONFIG_CPU_ARM32M_CORTEXM3
-  provide CONFIG_EFM32_FLASH_PAGE_SIZE=9
-  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=8
+  flags value
 %config end
 
-%config CONFIG_EFM32_ZERO_GECKO
-  desc Support for EFM32 Zero Gecko family of microcontrollers
+%config CONFIG_EFM32_ARCHREV
+  desc Specifies the microcontroller architecture version. see include/arch/efm32/chips.h
   parent CONFIG_ARCH_EFM32
-  depend CONFIG_CPU_ARM32M_CORTEXM0
-  provide CONFIG_EFM32_FLASH_PAGE_SIZE=10
-  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=4
-%config end
-
-%config CONFIG_EFM32_LEOPARD_GECKO
-  desc Support for EFM32 Leopard Gecko family of microcontrollers
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_CPU_ARM32M_CORTEXM3
-  provide CONFIG_EFM32_FLASH_PAGE_SIZE=11
-  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
-%config end
-
-%config CONFIG_EFM32_WONDER_GECKO
-  desc Support for EFM32 Wonder Gecko family of microcontrollers
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_CPU_ARM32M_CORTEXM4
-  provide CONFIG_EFM32_FLASH_PAGE_SIZE=11
-  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
-%config end
-
-%config CONFIG_EFM32_GIANT_GECKO
-  desc Support for EFM32 Giant Gecko family of microcontrollers
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_CPU_ARM32M_CORTEXM3
-  provide CONFIG_EFM32_FLASH_PAGE_SIZE=12
-  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
-%config end
-
-%config CONFIG_EFR32
-  desc Support for EFR32 Gecko family of microcontrollers
-  parent CONFIG_ARCH_EFM32
-  provide CONFIG_EFM32_FLASH_PAGE_SIZE=9
-  depend CONFIG_CPU_ARM32M_CORTEXM4
+  flags value
 %config end
 
 %config CONFIG_EFM32_BOARD
