--- a/arch/efm32/drivers/aes/aes.config
+++ b/arch/efm32/drivers/aes/aes.config
@@ -4,12 +4,13 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_CRYPTO
   suggest CONFIG_DEVICE_DELAYED_REQUEST
+  require CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
 %config end
 
 %config CONFIG_DRIVER_EFM32_AES_KEY256
   desc Enable support for 256 bits keys
   parent CONFIG_DRIVER_EFM32_AES
-  exclude CONFIG_EFM32_ZERO_GECKO
+  require CONFIG_EFM32_FAMILY!=EFM32_FAMILY_ZERO
 %config end
 
 %config CONFIG_DRIVER_EFM32_AES_ECB
