efm32: Add EFR32 support

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -4,7 +4,7 @@
   module arch Platforms::Silabs EFM32
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=efm32
-  single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO CONFIG_EFM32_GIANT_GECKO
+  single CONFIG_EFM32_GECKO CONFIG_EFM32_ZERO_GECKO CONFIG_EFM32_LEOPARD_GECKO CONFIG_EFM32_WONDER_GECKO CONFIG_EFM32_GIANT_GECKO CONFIG_EFR32
   require CONFIG_EFM32_FLASH_PAGE_SIZE
 %config end
 
@@ -86,6 +86,13 @@
   depend CONFIG_CPU_ARM32M_CORTEXM3
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=12
   provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
+%config end
+
+%config CONFIG_EFR32
+  desc Support for EFR32 Gecko family of microcontrollers
+  parent CONFIG_ARCH_EFM32
+  provide CONFIG_EFM32_FLASH_PAGE_SIZE=9
+  depend CONFIG_CPU_ARM32M_CORTEXM4
 %config end
 
 %config CONFIG_EFM32_BOARD
