--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -52,6 +52,7 @@
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c000
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c400
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c800
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010000
 %config end
 
 %config CONFIG_DRIVER_EFM32_USART_PRINTK_PIN
