--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -47,12 +47,13 @@
   require CONFIG_DRIVER_EFM32_USART_PRINTK_LOC
   require CONFIG_DRIVER_EFM32_USART_RATE
   require CONFIG_MUTEK_PRINTK_ADDR!=0
-  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e000
-  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e400
-  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c000
-  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c400
-  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c800
-  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010000
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e400 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c400 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c800 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG1
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40010400 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG1
 %config end
 
 %config CONFIG_DRIVER_EFM32_USART_PRINTK_PIN
