dma: Change class api and efm32 drivers. Add test

--- a/arch/efm32/drivers/dma/dma.config
+++ b/arch/efm32/drivers/dma/dma.config
@@ -14,13 +14,21 @@
   default 4
 %config end
 
+%config CONFIG_DRIVER_EFM32_DMA_TEST
+  desc Special mode for test
+  parent CONFIG_DRIVER_EFM32_DMA
+  default undefined
+%config end
+
 %config CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT
   desc Maximum number of dma channel 
   parent CONFIG_DRIVER_EFM32_DMA
   flags value
 %config end
 
-%config CONFIG_DRIVER_EFM32_DMA_DOUBLE_BUFFERING
-  desc Support for EFM32 PING PONG mode
+%config CONFIG_DRIVER_EFM32_DMA_LINKED_LIST_SIZE
+  desc Number of descriptor allocated for linked list
   parent CONFIG_DRIVER_EFM32_DMA
+  flags value
+  default 2
 %config end
