--- a/drivers/mem/Makefile
+++ b/drivers/mem/Makefile
@@ -1,3 +1,4 @@
 subdirs-$(CONFIG_DRIVER_MEM_RAM) += ram
 subdirs-$(CONFIG_DRIVER_MEM_I2C_EEPROM) += i2c_eeprom
+subdirs-$(CONFIG_DRIVER_MEM_SD1306) += sd1306
 
