Tweak hello app to test SSD1306

--- a/examples/hello/config
+++ b/examples/hello/config
@@ -13,3 +13,7 @@
   # Features
   CONFIG_APP_START
 
+CONFIG_DRIVER_MEM_SD1306
+CONFIG_MUTEK_THREAD
+CONFIG_MUTEK_CONTEXT_SCHED
+CONFIG_DEVICE_SPI_TRANSACTION
