--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -8,6 +8,7 @@ objs-$(CONFIG_DRIVER_BUTTON_SET) += button_set.o
 subdirs-$(CONFIG_DRIVER_MATRIX_KEYBOARD) += matrix_keyboard
 subdirs-$(CONFIG_DRIVER_ADXL362) += adxl362
 subdirs-$(CONFIG_DRIVER_MPU650X) += mpu650x
+subdirs-$(CONFIG_DRIVER_ICM20602) += icm20602
 subdirs-$(CONFIG_DRIVER_PCF8563) += pcf8563
 subdirs-$(CONFIG_DRIVER_DS3231) += ds3231
 subdirs-$(CONFIG_DRIVER_MLX90614) += mlx90614
