efm32 gpio: added support for UNTIL request type

--- a/arch/efm32/drivers/gpio/gpio.config
+++ b/arch/efm32/drivers/gpio/gpio.config
@@ -6,6 +6,13 @@
   depend CONFIG_DEVICE_GPIO
 %config end
 
+%config CONFIG_DRIVER_EFM32_GPIO_UNTIL
+  desc Enable support of the DEV_GPIO_UNTIL gpio type of requests
+  parent CONFIG_DRIVER_EFM32_GPIO
+  depend CONFIG_DEVICE_IRQ
+  default defined
+%config end
+
 %config CONFIG_DRIVER_EFM32_GPIO_ICU
   desc Enable use of the EFM32 GPIO as an irq controller
   parent CONFIG_DRIVER_EFM32_GPIO
