bytecode: support sandboxing with memory address translation

--- a/tests/pool/bytecode/config
+++ b/tests/pool/bytecode/config
@@ -16,10 +16,10 @@
   CONFIG_APP_START
   CONFIG_MUTEK_BYTECODE_TRACE
 
-%section t_checking
-  CONFIG_MUTEK_BYTECODE_CHECKING!
+%section t_sandbox
+  CONFIG_MUTEK_BYTECODE_SANDBOX!
 %else
-  CONFIG_MUTEK_BYTECODE_CHECKING! undefined
+  CONFIG_MUTEK_BYTECODE_SANDBOX! undefined
 
 %section t_debug
   CONFIG_MUTEK_BYTECODE_DEBUG!
