--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -607,9 +607,8 @@
   depend CONFIG_CPU_NATIVE_BYTECODE
 %config end
 
-%config CONFIG_MUTEK_BYTECODE_CHECKING
-  desc Enable bytecode checks at execution.
-  desc When this option is disabled, the bytecode may crash the system.
+%config CONFIG_MUTEK_BYTECODE_SANDBOX
+  desc Support sandboxed execution of bytecode.
   parent CONFIG_MUTEK_BYTECODE_VM
 %config end
 
