stm32: Fix alternate function remapping

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -10,6 +10,7 @@
   require CONFIG_STM32_AHBRAMSIZE
   require CONFIG_STM32_CPURAMSIZE
   require CONFIG_STM32_FLASHSIZE
+  provide CONFIG_DEVICE_IOMUX_MAX_MUX=12
 %config end
 
 %init INIT_STM32_CLOCK
