shell: added named buffers

--- a/mutek/Makefile
+++ b/mutek/Makefile
@@ -4,7 +4,7 @@ DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 objs += fault.o startup.o mem_alloc.o kroutine.o
 
 objs-$(CONFIG_MUTEK_CONSOLE) += console.o
-objs-$(CONFIG_MUTEK_SHELL) += shell.o shell_mem.o
+objs-$(CONFIG_MUTEK_SHELL) += shell.o shell_mem.o shell_buffer.o
 objs-$(CONFIG_MUTEK_MEM_REGION) += mem_region.o
 objs-$(CONFIG_MUTEK_MEMALLOC_SMART) += memory_allocator_smart.o
 objs-$(CONFIG_MUTEK_MEMALLOC_SIMPLE) += memory_allocator_simple.o
