--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -195,6 +195,12 @@
   function mutek_shell_thread_init
 %init end
 
+%config CONFIG_MUTEK_SHELL_BUFFER
+  parent CONFIG_MUTEK_SHELL
+  depend CONFIG_MUTEK_MEMALLOC_SMART
+  desc Enable management of named buffers in shell context
+%config end
+
 %config CONFIG_MUTEK_LOGO
   desc Add builtin MutekH logo bitmap to the kernel
   parent CONFIG_MUTEK
