shell: Add tokens to enable/disable commands of a specific device class in shell

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -611,3 +611,65 @@
   function device_sleep_init
 %init end
 
+%config CONFIG_DEVICE_SHELL_TIMER
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_TIMER
+  default defined
+  desc Enable timer command in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_CHAR
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_CHAR
+  default defined
+  desc Enable char commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_SPI
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_SPI
+  default defined
+  desc Enable spi commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_CLOCK
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_CLOCK
+  default defined
+  desc Enable clock commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_GPIO
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_GPIO
+  default defined
+  desc Enable gpio commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_I2C
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_I2C
+  default defined
+  desc Enable i2c commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_PWM
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_PWM
+  default defined
+  desc Enable pwm commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_CRYPTO
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_CRYPTO
+  default defined
+  desc Enable cryto commands in shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_UART
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_UART
+  default defined
+  desc Enable usart commands in shell
+%config end
