--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -618,6 +618,14 @@
   desc Enable timer command in shell
 %config end
 
+%config CONFIG_DEVICE_SHELL_RFPACKET
+  parent CONFIG_DEVICE_SHELL
+  depend CONFIG_DEVICE_RFPACKET
+  depend CONFIG_MUTEK_SHELL_BUFFER
+  default defined
+  desc Enable rfpacket commands in shell
+%config end
+
 %config CONFIG_DEVICE_SHELL_CHAR
   parent CONFIG_DEVICE_SHELL
   depend CONFIG_DEVICE_CHAR
