efm32: added CONFIG_EFM32_BOARD_INIT

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -9,27 +9,10 @@
   require CONFIG_EFM32_ARCHREV
 %config end
 
-%config CONFIG_EFM32_BOOT_BUTTON
-  desc Wait for pushbutton release on startup
-  parent CONFIG_ARCH_EFM32
-  require CONFIG_EFM32_BOOT_BUTTON_PIN
-%config end
-
-%config CONFIG_EFM32_BOOT_BUTTON_PIN
-  desc Sepcify pin index of the push button
-  flags value
-  parent CONFIG_EFM32_BOOT_BUTTON
-%config end
-
-%init INIT_EFM32_BOOT_BUTTON
-  parent CONFIG_EFM32_BOOT_BUTTON
-  during INIT_BOOTSTRAP
-  before INIT_DEVICE
-  before INIT_EFM32_CLOCK_ENABLE
-  function efm32_boot_button_wait
-%init end
-
 %init INIT_EFM32_CLOCK_ENABLE
+  # This enables all clocks before init of device drivers when no
+  # clock driver is used. Printk and board specific inits must still
+  # enable their clocks as needed.
   parent CONFIG_ARCH_EFM32
   during INIT_BOOTSTRAP
   before INIT_DEVICE
@@ -62,8 +45,22 @@
   flags value
 %config end
 
-%config CONFIG_EFM32_STK_BC_EN
-  desc Enable board controller on STK dev boards
+%config CONFIG_EFM32_BOARD_INIT
+  desc This calls a efm32_board_init function defined in the board support C file.
   parent CONFIG_ARCH_EFM32
 %config end
+
+%init INIT_EFM32_BOARD_INIT
+  parent CONFIG_ARCH_EFM32
+  during INIT_BOOTSTRAP
+  before INIT_DEVICE
+  before INIT_MUTEK_PRINTK
+
+  # We wait for button release before
+  # locking the chip with bad clock config
+  before INIT_EFM32_CLOCK_ENABLE
+
+  function efm32_board_init
+  condition CONFIG_EFM32_BOARD_INIT
+%init end
 
