bytecode sandbox: do not reset max cycles counter between calls to bc_run

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -615,6 +615,7 @@
 
 %config CONFIG_MUTEK_BYTECODE_SANDBOX
   desc Support sandboxed execution of bytecode.
+  flags auto
   parent CONFIG_MUTEK_BYTECODE_VM
 %config end
 
