arch/nrf5x: Fix printk init order

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -267,6 +267,7 @@
 %init INIT_DRIVER_NRF5X_PRINTK
   parent CONFIG_DRIVER_NRF5X_PRINTK
   during INIT_MUTEK_PRINTK
+  after INIT_MUTEK_DEFAULT_MEMALLOC
   function nrf5x_printk_init
 %init end
 
