arch/nrf5x: Only build special init for nRF52

--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -26,6 +26,7 @@
 %init INIT_NRF52
   parent CONFIG_ARCH_NRF5X
   during INIT_BOOTSTRAP
+  condition CONFIG_NRF5X_MODEL>=52000
   function nrf52_init
 %init end
 
