--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -39,6 +39,7 @@
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40084000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40084400 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFM
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4004a000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG1
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4004a000 CONFIG_EFM32_ARCHREV=EFM32_ARCHREV_EFR_XG12
 %config end
 
 %config CONFIG_DRIVER_EFM32_LEUART_PRINTK_PIN
