libble: Make Security DB always available, but volatile if without CONFIG_DEVICE_PERSIST

--- a/libble/ble.config
+++ b/libble/ble.config
@@ -74,17 +74,9 @@
   flags auto
 %config end
 
-%config CONFIG_BLE_SECURITY_DB
-  desc Enable peer DB
-  parent CONFIG_BLE
-  depend CONFIG_DEVICE_PERSIST
-  depend CONFIG_BLE_CRYPTO
-  flags auto
-%config end
-
 %config CONFIG_BLE_SECURITY_DB_MAX
   desc Maximum count of Peer DB entries
-  parent CONFIG_BLE_SECURITY_DB
+  parent CONFIG_BLE_CRYPTO
   flags value
   default 4
 %config end
