cpu/hexo: added the CONFIG_CPU_INT64_ALIGN, use 4 bytes alignment on arm32m

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -92,6 +92,7 @@
   provide CONFIG_CPU_ARCHNAME=arm32m
   single CONFIG_CPU_ARM32M_CORTEXM0 CONFIG_CPU_ARM32M_CORTEXM0PLUS CONFIG_CPU_ARM32M_CORTEXM1 CONFIG_CPU_ARM32M_CORTEXM3 CONFIG_CPU_ARM32M_CORTEXM4 CONFIG_CPU_ARM32M_CORTEXM7
   provide CONFIG_HEXO_STACK_ALIGN=8
+  provide CONFIG_CPU_INT64_ALIGN=4
 
   provide CONFIG_CPU_EXCEPTION_ADDR=0x00000000
   exclude CONFIG_HEXO_CONTEXT_NESTED
