--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -123,6 +123,12 @@
   flags value minval internal
 %config end
 
+%config CONFIG_CPU_INT64_ALIGN
+  parent CONFIG_CPU
+  default 8
+  flags value
+%config end
+
 %config CONFIG_CPU_HARDWARE_MUL
   parent CONFIG_CPU
   desc Specifies the maximum size in bits of the output values supported by the processor hardware multiplier
