fixed config warning

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -125,6 +125,7 @@
 
 %config CONFIG_CPU_INT64_ALIGN
   parent CONFIG_CPU
+  desc Specifies the byte alignment used for int64_t and uint64_t integer types
   default 8
   flags value
 %config end
