--- a/scripts/global.config
+++ b/scripts/global.config
@@ -41,6 +41,12 @@
   default out
 %config end
 
+%config CONFIG_COMPILE_EXT
+  flags value root
+  desc Define build output file name extension.
+  default out
+%config end
+
 %config CONFIG_COMPILE_OPTIMIZE
   desc Set compiler optimize switch value (0, 1, 2, 3, s)
   default 2
