arm32m: Fix token name

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -199,5 +199,5 @@
   parent CONFIG_CPU_ARM32M_ITM_PRINTK
   during INIT_MUTEK_PRINTK
   function arm32m_itm_printk_init
-  after INIT_CPU_ARM32M_CORESIGHT
+  after INIT_CPU_ARM32M
 %init end
