--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -3,7 +3,7 @@ enum_headers = include/hexo/power.h
 
 DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
-objs = cpu.o context.o interrupt.o init.o enum.o atomic.o
+objs = cpu.o context.o interrupt.o init.o enum.o atomic.o bit.o
 
 objs-$(CONFIG_HEXO_IPI) += ipi.o
 objs-$(CONFIG_MUTEK_SHELL) += shell_power.o
