arch/nrf5x: Add nRF52840 USB driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -345,6 +345,19 @@
   depend CONFIG_DEVICE_VALIO_ADC
 %config end
 
+# USB Device
+
+%config CONFIG_DRIVER_NRF52_USBD
+  desc Enable nRF52 USB Device driver
+  parent CONFIG_ARCH_NRF5X
+  require CONFIG_NRF5X_MODEL=52840
+  depend CONFIG_DEVICE_USBDEV
+  depend CONFIG_DRIVER_NRF5X_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+  depend CONFIG_DEVICE_CLOCK_THROTTLE
+  depend CONFIG_DEVICE_CLOCK
+%config end
+
 # PDM
 
 %config CONFIG_DRIVER_NRF52_PDM
