efm32: add CONFIG_LOAD_ROM_RO_SIZE

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -26,6 +26,12 @@
   flags value
 %config end
 
+%config CONFIG_EFM32_FLASHSIZE
+  desc Size of flash mapped at 0x00000000
+  parent CONFIG_ARCH_EFM32
+  flags value
+%config end
+
 %config CONFIG_EFM32_FAMILY
   desc Specifies the microcontroller Gecko family. see include/arch/efm32/chips.h
   parent CONFIG_ARCH_EFM32
