mutek/bytecode: add support for breakpoints

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -592,6 +592,7 @@
   desc Enable the mutekh customizable bytecode.
   flags auto
   parent CONFIG_MUTEK
+  require CONFIG_MUTEK_BYTECODE_BREAKPOINTS<=16
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_VM
@@ -628,5 +629,12 @@
   desc Enable verbose bytecode execution.
   parent CONFIG_MUTEK_BYTECODE_VM
   depend CONFIG_MUTEK_BYTECODE_DEBUG
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_BREAKPOINTS
+  desc Enable breakpoints
+  parent CONFIG_MUTEK_BYTECODE_VM
+  flags value
+  default 0
 %config end
 
