mutek/bytecode: allow use of a separate virtual machine for sandboxed bytecodes

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -597,6 +597,7 @@
 
 %config CONFIG_MUTEK_BYTECODE_VM
   desc Enable the mutekh bytecode interpreter.
+  flags auto
   parent CONFIG_MUTEK_BYTECODE
   when CONFIG_CPU_NATIVE_BYTECODE!
 %config end
@@ -617,6 +618,11 @@
 %config CONFIG_MUTEK_BYTECODE_SANDBOX
   desc Support sandboxed execution of bytecode.
   flags auto
+  parent CONFIG_MUTEK_BYTECODE_VM
+%config end
+
+%config CONFIG_MUTEK_BYTECODE_VM_SINGLE
+  desc Use a single slower/bigger VM for sandboxed and non-sandboxed bytecodes
   parent CONFIG_MUTEK_BYTECODE_VM
 %config end
 
