bytecode: added support for execution modes

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -613,6 +613,7 @@
   parent CONFIG_MUTEK_BYTECODE
   when CONFIG_CPU_NATIVE_BYTECODE
   depend CONFIG_CPU_NATIVE_BYTECODE
+  exclude CONFIG_MUTEK_BYTECODE_VM64
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_SANDBOX
