--- a/cpu/arm32m/Makefile
+++ b/cpu/arm32m/Makefile
@@ -8,5 +8,6 @@ objs += driver_timer.o
 endif
 
 objs-$(CONFIG_CPU_ARM32M_ITM_PRINTK) += itm_printk.o
+objs-$(CONFIG_MUTEK_BYTECODE_NATIVE) += bytecode.o
 
 copy = ldscript
