--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -319,6 +319,11 @@
   parent CONFIG_DRIVER_NRF5X_AES
 %config end
 
+%config CONFIG_DRIVER_NRF5X_AES_CBC
+  desc Enable CBC mode for AES driver
+  parent CONFIG_DRIVER_NRF5X_AES
+%config end
+
 %config CONFIG_DRIVER_NRF5X_RNG
   desc Enable nRF5x Thermal RNG driver
   parent CONFIG_ARCH_NRF5X
