WIP: libble: Rework library architecture to use kroutines-based libnetwork

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -399,6 +399,7 @@
   depend CONFIG_DEVICE_NET
   depend CONFIG_DEVICE_CRYPTO
   depend CONFIG_DEVICE_CLOCK_GATING
+  depend CONFIG_MUTEK_KROUTINE_QUEUE
 %config end
 
 %config CONFIG_DRIVER_NRF5X_BLE_PPI_COUNT
