--- a/examples/hello/config
+++ b/examples/hello/config
@@ -13,3 +13,9 @@
   # Features
   CONFIG_APP_START
 
+CONFIG_DRIVER_CRYPTO_SOFT_AES
+CONFIG_DRIVER_CRYPTO_SOFT_AES_CBC
+CONFIG_DRIVER_CRYPTO_SOFT_AES_CMAC
+CONFIG_DRIVER_NRF5X_AES
+CONFIG_DRIVER_NRF5X_AES_CBC
+CONFIG_DRIVER_NRF5X_AES_CMAC
