--- a/libble/ble.config
+++ b/libble/ble.config
@@ -4,6 +4,7 @@
   depend CONFIG_NET
   depend CONFIG_DEVICE_NET
   depend CONFIG_MUTEK_BUFFER_POOL
+  depend CONFIG_MUTEK_BYTECODE
   depend CONFIG_DEVICE_CRYPTO
 %config end
 
