drivers/mem: Add SSD1320 OLED driver (WIP)

--- a/drivers/mem/Makefile
+++ b/drivers/mem/Makefile
@@ -1,4 +1,5 @@
 subdirs-$(CONFIG_DRIVER_MEM_RAM) += ram
 subdirs-$(CONFIG_DRIVER_MEM_I2C_EEPROM) += i2c_eeprom
 subdirs-$(CONFIG_DRIVER_MEM_SD1306) += sd1306
+subdirs-$(CONFIG_DRIVER_MEM_SSD1320) += ssd1320
 
