si446x: added support for the raw modulation in modem calculator

--- a/drivers/rfpacket/si446x/si446x.config
+++ b/drivers/rfpacket/si446x/si446x.config
@@ -47,6 +47,12 @@
   flags value
 %config end
 
+%config CONFIG_DRIVER_RFPACKET_SI446X_MOD_RAW
+  desc SI446X RAW support
+  parent CONFIG_DRIVER_RFPACKET_SI446X
+  default undefined
+%config end
+
 %config CONFIG_DRIVER_RFPACKET_SI446X_MOD_00K
   desc SI446X 2FSK support
   parent CONFIG_DRIVER_RFPACKET_SI446X
