--- a/tests/pool/drv_si446x/config
+++ b/tests/pool/drv_si446x/config
@@ -37,6 +37,11 @@
 %else
   CONFIG_DRIVER_RFPACKET_SI446X_MOD_00K! undefined
 
+%section t_raw
+  CONFIG_DRIVER_RFPACKET_SI446X_MOD_RAW!
+%else
+  CONFIG_DRIVER_RFPACKET_SI446X_MOD_RAW! undefined
+
 %section t_2fsk
   CONFIG_DRIVER_RFPACKET_SI446X_MOD_2FSK!
 %else
