example: updated bytecode, removed most code from test

--- a/examples/bytecode/config
+++ b/examples/bytecode/config
@@ -15,7 +15,7 @@
 
   CONFIG_MUTEK_BYTECODE_DEBUG
   #CONFIG_MUTEK_BYTECODE_TRACE
-  CONFIG_MUTEK_BYTECODE_NATIVE
+  CONFIG_MUTEK_BYTECODE_NATIVE undefined
   CONFIG_MUTEK_BYTECODE_VM
 
   %include arch/arch.build
