sx127x: Add FSK/OOK driver and rename existing Lora driver

--- a/drivers/rfpacket/sx127x/sx127x.config
+++ b/drivers/rfpacket/sx127x/sx127x.config
@@ -15,13 +15,14 @@
 %config CONFIG_DRIVER_RFPACKET_SX127X_MAX_PKT_SIZE
   desc SX127X maximum packet size
   parent CONFIG_DRIVER_RFPACKET_SX127X
-  default 256
+  default 64
   flags value
 %config end
 
-%config CONFIG_DRIVER_RFPACKET_SX127X_CCA
-  desc Enable Semtech SX127X CCA support
+%config CONFIG_DRIVER_RFPACKET_SX127X_RAW_MODE
+  desc Enable Semtech SX127X raw mode support
   parent CONFIG_DRIVER_RFPACKET_SX127X
+  default undefined
 %config end
 
 %config CONFIG_DRIVER_RFPACKET_SX127X_CHIPREV
@@ -50,10 +51,10 @@
   default defined
 %config end
 
-%config CONFIG_DRIVER_RFPACKET_SX127X_MOD_4FSK
-  desc SX127X 4FSK support
+%config CONFIG_DRIVER_RFPACKET_SX127X_MOD_LORA
+  desc SX127X lora support
   parent CONFIG_DRIVER_RFPACKET_SX127X
-  default defined
+  default undefined
 %config end
 
 %config CONFIG_DRIVER_RFPACKET_SX127X_SPI_BITRATE
