--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -11,3 +11,4 @@ subdirs-$(CONFIG_DRIVER_EFM32_PWM) += pwm
 subdirs-$(CONFIG_DRIVER_EFM32_DMA) += dma
 subdirs-$(CONFIG_DRIVER_EFR32_DMA) += ldma
 subdirs-$(CONFIG_DRIVER_EFM32_ADC) += adc
+subdirs-$(CONFIG_DRIVER_EFM32_BITBANG) += bitbang
