stm32: allows change of arm32m exeception addr

--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -33,7 +33,7 @@
   parent CONFIG_CPU
   desc This specifies the processor exception base address.
   desc This can be the fixed address or the default address when relocatable.
-  flags value
+  flags value userval
 %config end
 
 %config CONFIG_CPU_EXCEPTION_SIZE
