--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -13,7 +13,7 @@ objs-$(CONFIG_DRIVER_NRF5X_SPI) += spi.o
 objs-$(CONFIG_DRIVER_NRF52_SPIM) += spim.o
 objs-$(CONFIG_DRIVER_NRF5X_I2C) += i2c.o
 objs-$(CONFIG_DRIVER_NRF5X_RTC) += rtc.o
-objs += nvmc.o
+objs-$(CONFIG_DRIVER_NRF5X_NVMC) += nvmc.o
 objs-$(CONFIG_DRIVER_NRF5X_TIMER) += timer.o
 objs-$(CONFIG_DRIVER_NRF5X_AES) += aes.o
 objs-$(CONFIG_DRIVER_NRF5X_RNG) += rng.o
