created libpersist from implementation in nrf5x/nvmc, removed the persist device class

--- a/libble/ble.config
+++ b/libble/ble.config
@@ -77,7 +77,7 @@
 %config CONFIG_BLE_SECURITY_DB
   desc Enable peer DB
   parent CONFIG_BLE
-  depend CONFIG_DEVICE_PERSIST
+  depend CONFIG_PERSIST
   depend CONFIG_BLE_CRYPTO
   flags auto
 %config end
