soclib/arm32: cpu provide CONFIG_CPU_CACHE

--- a/cpu/arm32/arm32.config
+++ b/cpu/arm32/arm32.config
@@ -7,6 +7,7 @@
   parent CONFIG_CPU_ARM32
   depend CONFIG_ARCH_SOCLIB
   depend CONFIG_COMPILE_SOFTFLOAT
+  provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_NAME=arm
   provide CONFIG_CPU_WAIT_IRQ
