--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -249,6 +249,7 @@
   depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
   require CONFIG_MUTEK_PRINTK_ADDR!=0
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40002000
 %config end
 
 %init INIT_DRIVER_NRF5X_PRINTK
