arch/nrf: fixed init condition

--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -23,11 +23,10 @@
   flags value
 %config end
 
-%init INIT_NRF52
+%init INIT_NRF5X
   parent CONFIG_ARCH_NRF5X
   during INIT_BOOTSTRAP
-  condition CONFIG_NRF5X_MODEL>=52000
-  function nrf52_init
+  function nrf5x_init
 %init end
 
 %config CONFIG_NRF5X_RADIO_DCDC
