libdevice: Add I2C slave class header

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -470,7 +470,7 @@
 %config CONFIG_DEVICE_I2C
   parent CONFIG_DEVICE
   flags auto
-  desc Enable I2C device support
+  desc Enable I2C controller support
 %config end
 
 %config CONFIG_DEVICE_I2C_REQUEST
@@ -510,6 +510,12 @@
   depend CONFIG_DEVICE_GPIO
   flags auto
   desc Enable GPIO access from I2C bytecode
+%config end
+
+%config CONFIG_DEVICE_I2C_SLAVE
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable I2C slave device support
 %config end
 
 %config CONFIG_DEVICE_MEM
