arch/efm32: Add I2C slave class driver

--- a/arch/efm32/drivers/i2c/i2c.config
+++ b/arch/efm32/drivers/i2c/i2c.config
@@ -6,3 +6,10 @@
   depend CONFIG_DEVICE_IRQ
 %config end
 
+%config CONFIG_DRIVER_EFM32_I2C_SLAVE
+  desc Enable EFM32 Slave I2C driver
+  parent CONFIG_ARCH_EFM32
+  depend CONFIG_DEVICE_I2C_SLAVE
+  depend CONFIG_DEVICE_IRQ
+%config end
+
