--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -3,7 +3,7 @@ subdirs-$(CONFIG_DRIVER_EFM32_USART) += usart
 subdirs-$(CONFIG_DRIVER_EFM32_TIMER) += timer 
 subdirs-$(CONFIG_DRIVER_EFM32_RTC) += rtc 
 subdirs-$(CONFIG_DRIVER_EFM32_GPIO) += gpio
-subdirs-$(CONFIG_DRIVER_EFM32_I2C) += i2c
+subdirs += i2c
 subdirs-$(CONFIG_DRIVER_EFM32_RECMU) += recmu
 subdirs-$(CONFIG_DRIVER_EFM32_MSC) += msc
 subdirs-$(CONFIG_DRIVER_EFM32_AES) += aes
