arch/nrf5x: added missing CONFIG_DEVICE_IRQ deps

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -64,6 +64,7 @@
   desc Enable nRF5x GPIO driver
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_GPIO
+  depend CONFIG_DEVICE_IRQ
 %config end
 
 %config CONFIG_DRIVER_NRF5X_GPIO_ICU_CHANNEL_COUNT
@@ -312,6 +313,7 @@
   desc Enable nRF5x Thermal RNG driver
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_CRYPTO
+  depend CONFIG_DEVICE_IRQ
 %config end
 
 # ADC
@@ -321,6 +323,7 @@
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_VALIO
   depend CONFIG_DEVICE_VALIO_ADC
+  depend CONFIG_DEVICE_IRQ
 %config end
 
 # SAADC
