test/dev_spi: added si446x and spi_flash drivers

--- a/tests/pool/dev_spi/config
+++ b/tests/pool/dev_spi/config
@@ -20,6 +20,8 @@
   # spi slaves drivers
   CONFIG_DRIVER_USBDEV_MAX3420
   CONFIG_DRIVER_RFPACKET_SX127X
+  CONFIG_DRIVER_RFPACKET_SI446X
+  CONFIG_DRIVER_MEM_SPI_FLASH
 %warning  CONFIG_DRIVER_MCP23S17
 %warning  CONFIG_DRIVER_ADXL362
 
