--- a/libpersist/persist.config
+++ b/libpersist/persist.config
@@ -2,5 +2,5 @@
 %config CONFIG_PERSIST
   desc Provide support for persitent storage of values in flash memory
   flags auto
-  module libpersist Libraries::Persist
+  module libpersist Libraries::Persistent configuration service
 %config end
