driver/dwc_usb/efm32: Add clock throttling support for clock endpoints
This way, accurate HFXO is implicitly requested when device is
plugged.  Application code does not have to bother about clock
configuration.

--- a/drivers/usb/synopsys/dwc.config
+++ b/drivers/usb/synopsys/dwc.config
@@ -16,4 +16,5 @@
   desc Enable Synopsys DWC usb driver for EFM32
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DRIVER_USB_SYNOPSYS
+  suggest CONFIG_DEVICE_CLOCK_THROTTLE
 %config end
