libdevice/uart: Move UART configuration class to valio
Drop DRIVER_UART class. It is only a setter and has no real added
value.

Split out uart configuration structure and resource declaration to
device/resource/uart.h.  It is generic and available even if there is
not runtime configuration of UARTs possible (device tree may still
contain init resources).

Add a uart_config valio subclass that can read/write/wait for UART
configuration of a device. Move all implementations to this API.

--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -4,7 +4,7 @@
   parent CONFIG_ARCH_STM32
   depend CONFIG_DEVICE_CHAR
   depend CONFIG_DEVICE_IOMUX
-  depend CONFIG_DEVICE_UART
+  depend CONFIG_DEVICE_VALIO_UART_CONFIG
   suggest CONFIG_DEVICE_IRQ
   provide CONFIG_DEVICE_START_LOG2INC=2
 %config end
