--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -117,6 +117,20 @@
   default 2
 %config end
 
+%config CONFIG_DEVICE_VALIO_UART_CONFIG
+  desc Valio UART config class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_UART_CONFIG_ATTRIBUTE_COUNT
+  desc Valio UART config class attribute count
+  parent CONFIG_DEVICE_VALIO_UART_CONFIG
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 1
+%config end
+
 %config CONFIG_DEVICE_VALIO_HUMIDITY
   desc Valio Humidity Sensor class enable
   parent CONFIG_DEVICE_VALIO
