added CONFIG_MUTEK_MEMALLOC to fully disable the memory allocator

--- a/libble/ble.config
+++ b/libble/ble.config
@@ -5,6 +5,7 @@
   depend CONFIG_DEVICE_NET
   depend CONFIG_MUTEK_BUFFER_POOL
   depend CONFIG_DEVICE_CRYPTO
+  depend CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_BLE_SNIFFER
