--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -1,6 +1,7 @@
 %config CONFIG_DEVICE
   desc MutekH device handling code
   module device Core::Devices support library
+  depend CONFIG_MUTEK_MEMALLOC
   flags auto
 %config end
 
