--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -4,6 +4,7 @@
   flags auto
   require CONFIG_PTHREAD_STACK_SIZE
   depend CONFIG_MUTEK_CONTEXT_SCHED
+  depend CONFIG_MUTEK_MEMALLOC
   module libpthread Libraries::POSIX Threads
 %config end
 
