--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -6,6 +6,7 @@
   depend CONFIG_LIBC_PRINTF
   depend CONFIG_MUTEK_CONTEXT_SCHED
   depend CONFIG_DEVICE_CHAR
+  depend CONFIG_MUTEK_MEMALLOC_SMART
   flags auto
 %config end
 
