--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -4,6 +4,7 @@
   module libvfs Libraries::Virtual File System
   require CONFIG_VFS_NAMELEN
   depend CONFIG_MUTEK_SEMAPHORE
+  depend CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_VFS_NAMELEN
