--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -3,7 +3,6 @@
   desc MutekH kernel core
   module mutek Core::Kernel services
   flags mandatory
-  single CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
 %config end
 
 %init INIT_MUTEKH_STARTUP
@@ -165,6 +164,7 @@
   parent CONFIG_MUTEK
   desc Enable support for mutek interactive command shell
   depend CONFIG_LIBTERMUI_CONSOLE
+  depend CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_MUTEK_SHELL_THREAD
@@ -442,8 +442,15 @@
 ######################################################################
 #		Memory allocator
 
-%init INIT_MUTEK_MEMALLOC
+%config CONFIG_MUTEK_MEMALLOC
   parent CONFIG_MUTEK
+  desc Memory allocation support
+  single CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART
+  default defined
+%init end
+
+%init INIT_MUTEK_MEMALLOC
+  parent CONFIG_MUTEK_MEMALLOC
   desc Initialization of memory allocator
   during INIT_MEMORY
   after INIT_MEMORY_SECTIONS
@@ -452,7 +459,7 @@
 
 %config CONFIG_MUTEK_DEFAULT_MEMALLOC_INIT
   desc Enable initialization of memory allocator default region on startup
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_MEMALLOC
 %config end
 
 %init INIT_MUTEK_DEFAULT_MEMALLOC
@@ -472,7 +479,7 @@
 
 %config CONFIG_MUTEK_MEM_REGION
   desc Enable use of memory region handler.
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_MEMALLOC
 %config end
 
 %init INIT_MUTEK_MEM_REGION
@@ -486,14 +493,14 @@
 %config CONFIG_MUTEK_MEMALLOC_SIMPLE
   desc Enable use of simple memory allocation algorithm.
   desc Incremental memory allocation without freeing.
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_SMART
   desc Enable use of memory allocation algorithm.
   when CONFIG_MUTEK_MEMALLOC_SIMPLE!
   single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT
@@ -511,7 +518,7 @@
   desc Memory allocation block address alignment
   flags value
   default 0x20
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_SCRAMBLE
@@ -519,7 +526,7 @@
   desc Checks are performed when allocating or resizing a memory block to ensure free blocks have not been overwritten.
   desc The mem_check and memory_allocator_region_check functions can be used to check the whole chain of blocks.
   when CONFIG_DEBUG
-  parent CONFIG_MUTEK
+  parent CONFIG_MUTEK_MEMALLOC
 %config end
 
 %config CONFIG_MUTEK_MEMALLOC_SCRAMBLE_CHECK
