--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -5,6 +5,7 @@
   depend CONFIG_MUTEK_CONTEXT_SCHED
   depend CONFIG_MUTEK_SEMAPHORE
   depend CONFIG_MUTEK_BUFFER_POOL
+  depend CONFIG_MUTEK_MEMALLOC
   flags auto
 %config end
 
