added CONFIG_HEXO_CONTEXT to disable cpu context management

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -5,6 +5,7 @@
   module cpu Processors::x86 32 bit processor
   depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_CPU
+  depend CONFIG_HEXO_CONTEXT
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86
   provide CONFIG_CPU_ARCHNAME=x86
