--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -3,8 +3,9 @@ enum_headers = include/hexo/power.h
 
 DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
-objs = cpu.o context.o interrupt.o init.o enum.o atomic.o bit.o
+objs = cpu.o interrupt.o enum.o atomic.o bit.o
 
+objs-$(CONFIG_HEXO_CONTEXT) += context.o
 objs-$(CONFIG_HEXO_IPI) += ipi.o
 objs-$(CONFIG_MUTEK_SHELL) += shell_power.o
 
