--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -40,7 +40,7 @@
 %config CONFIG_HEXO_FPU
   desc Enables hardware floating points support
   flags auto
-  parent CONFIG_HEXO
+  parent CONFIG_HEXO_CONTEXT
   exclude CONFIG_COMPILE_SOFTFLOAT
 %config end
 
@@ -51,8 +51,15 @@
   suggest_when CONFIG_HEXO_IRQ CONFIG_HEXO_FPU
 %config end
 
-%init INIT_HEXO_CONTEXT
+%config CONFIG_HEXO_CONTEXT
   parent CONFIG_HEXO
+  default defined
+  desc Enable processor context save/restore
+  depend CONFIG_MUTEK_MEMALLOC
+%config end
+
+%init INIT_HEXO_CONTEXT
+  parent CONFIG_HEXO_CONTEXT
   desc Initialization of processor contexts and first interrupts enable.
   desc Execution context save/restore and interrupts/exceptions are allowed once this is done.
   during INIT_SMP
@@ -61,7 +68,7 @@
 %init end
 
 %config CONFIG_HEXO_CONTEXT_NESTED
-  parent CONFIG_HEXO
+  parent CONFIG_HEXO_CONTEXT
   flags auto
   desc Enable nested save/restore of registers in the same context.
   desc This allows either an explicit context switch, or an irq/fault to occur during execution of an irq/fault/syscall handler.
@@ -77,20 +84,20 @@
 %config end
 
 %config CONFIG_HEXO_CONTEXT_PREEMPT
-  parent CONFIG_HEXO
+  parent CONFIG_HEXO_CONTEXT
   flags auto
   desc Enable context switching on interrupts
 %config end
 
 %config CONFIG_HEXO_CONTEXT_IRQEN
-  parent CONFIG_HEXO
+  parent CONFIG_HEXO_CONTEXT
   flags auto
   desc Enable hook function on irq restore enable
   depend CONFIG_HEXO_IRQ
 %config end
 
 %config CONFIG_HEXO_CONTEXT_STATS
-  parent CONFIG_HEXO
+  parent CONFIG_HEXO_CONTEXT
   desc Enable context stats collection
 %config end
 
@@ -104,6 +111,7 @@
 
 %config CONFIG_HEXO_USERMODE
   parent CONFIG_HEXO
+  depend CONFIG_HEXO_CONTEXT
   flags auto
   desc Enable processor user privilege level support
 %config end
@@ -161,7 +169,7 @@
 %config CONFIG_HEXO_CPU_STACK_SIZE
   desc This specifies the size of the processor main context stack.
   flags value maxval
-  parent CONFIG_HEXO
+  parent CONFIG_HEXO_CONTEXT
   default 4096
 %config end
 
