--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -320,6 +320,7 @@
   flags auto
   single CONFIG_MUTEK_CONTEXT_SCHED_MIGRATION CONFIG_MUTEK_CONTEXT_SCHED_STATIC
   depend CONFIG_DEVICE_CPU
+  depend CONFIG_HEXO_CONTEXT
   parent CONFIG_MUTEK
   depend CONFIG_MUTEK_SCHED
 %config end
