--- a/cpu/arm32m/Makefile
+++ b/cpu/arm32m/Makefile
@@ -1,7 +1,8 @@
 
 subdirs = libc drivers
 
-objs = context_switch.o cpu_context.o boot.o exception.o
+objs = boot.o exception.o context_switch.o cpu_context.o
+
 objs-$(CONFIG_DRIVER_CPU_ARM32M) += driver.o
 ifneq ($(CONFIG_CPU_ARM32M_TIMER_SYSTICK)_$(CONFIG_CPU_ARM32M_TIMER_DWTCYC), undefined_undefined)
 objs += driver_timer.o
