libc: added CONFIG_LIBC_STRING_SMALL

--- a/libc/libc.config
+++ b/libc/libc.config
@@ -95,6 +95,12 @@
   depend CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
+%config CONFIG_LIBC_STRING_SMALL
+  parent CONFIG_LIBC
+  suggest_when CONFIG_COMPILE_OPTIMIZE=s
+  desc Use size optimized string function implementations
+%config end
+
 %config CONFIG_LIBC_FORMATTER
   parent CONFIG_LIBC
   flags auto
