moved cpu tree code from hexo/ to device/cpu

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -23,7 +23,7 @@
 %init end
 
 %init INIT_DEVICE_CPU_REGS
-  parent CONFIG_DEVICE
+  parent CONFIG_DEVICE_CPU
   desc Let processor driver initialize processor registers
   during INIT_CPUS
   function libdevice_cpu_regs_initsmp
